@@ -59,7 +59,7 @@ xmh_SOURCES =	\
         viewfuncs.c \
         xmh.h
 
-appman_SOURCES = \
+appman_PRE = \
         xmh.man
 
 # App default files  (*.ad)
@@ -92,9 +92,9 @@ CLEANFILES = $(APPDEFAULTFILES)
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
